objects/vlocity_ins__MarketingEventRegistration__c.object
<CustomObject>
    <description>A registration of an attendee to a planned marketing event.</description>
    <fields>
        <fullName>vlocity_ins__AutoNumber__c</fullName>
        <displayFormat>{0000}</displayFormat>
        <label>Auto-Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Marketing Event Registrations</relationshipLabel>
        <relationshipName>MarketingEventRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsCancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates this registration has been cancelled.</description>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LeadId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Marketing Event Registrations</relationshipLabel>
        <relationshipName>MarketingEventRegistrations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__MarketingEventId__c</fullName>
        <label>Marketing Event</label>
        <referenceTo>vlocity_ins__MarketingEvent__c</referenceTo>
        <relationshipLabel>Registrations</relationshipLabel>
        <relationshipName>MarketingEventRegistrations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__NameOnBadge__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Name on Badge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RegistrationType__c</fullName>
        <label>Registration Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Speaker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TitleOnBadge__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Title on Badge</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Marketing Event Registration</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Registration Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Event Registrations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>